# PaneldeControlOpenClaw

./: README.md  pyproject.toml
paneldecontrolopenclaw/: LICENSE  README.md  __init__.py  config.json  main.py  proxy_runner.py  runs.db
paneldecontrolopenclaw/backend/: __init__.py  crypto_utils.py  db.py  event_bus.py  integration.py  log_manager.py  permissions.py  proxy.py
paneldecontrolopenclaw/gui/: __init__.py  main_window.py  qt_main_window.py
paneldecontrolopenclaw/service/: paneldecontrolopenclaw-proxy.service
